new hamburger button and fixed icons

--- a/index.html
+++ b/index.html
@@ -3,16 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/17cd39bbab.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+
     <title>Trees UI</title>
   </head>
   <body>
     <section class="showcase">
       <header>
-        <h2 class="logo">Travel</h2>
-        <div class="toggle"></div>
+        <h2 class="logo">Hiking</h2>
+        <div class="toggle">
+          <i class="toggle fas fa-bars"></i>
+        </div>
       </header>
       <video src="../video/mountain.mp4" muted loop autoplay></video>
+      <div class="overlay"></div>
+      <div class="text">
+        <h2>Forest</h2>
+        <h3>Make your our trail</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, amet?
+          Voluptatem eaque inventore nesciunt nihil consequuntur voluptates
+          vitae, itaque ipsa. Similique repellendus itaque soluta harum suscipit
+          perferendis, adipisci aliquid tempora?
+        </p>
+        <a href="#">Start Hiking</a>
+      </div>
+      <ul class="social">
+        <li><i class="fab fa-facebook-f icon"></i></li>
+        <li><i class="fab fa-twitter icon"></i></li>
+        <li><i class="fab fa-instagram icon"></i></li>
+      </ul>
     </section>
+
+    <div class="menu">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Travel</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+    <script src="app.js"></script>
   </body>
 </html>
